--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,1 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
-
-## Loading and preprocessing the data
-
-
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+---title: "Reproducible Research: Peer Assessment 1"author: "yhyim"date: "2017-03-07"---### 1. Loading and preprocessing the data```{r}dat <- read.csv("activity.csv")str(dat)```### 2. What is mean total number of steps taken per day?To make a histogram of the total number of steps taken each day, aggregating the data by date and getting sum of steps.```{r}sumOfSteps <- aggregate(steps ~ date, dat, sum)hist(sumOfSteps$steps, main = "Total number of steps taken each day", xlab = "Steps", col="green")```Mean of the total number of steps taken per day is below.```{r}mean(dat$steps, na.rm = TRUE)```Median of the total number of steps taken per day is below.```{r}median(dat$steps, na.rm = TRUE)```### 3. What is the average daily activity pattern?To make a time series plot of the 5-minute interval and the average number of steps taken, aggregating the data by interval and getting average of steps.```{r}avgOfSteps <- aggregate(steps ~ interval, dat, mean)plot(avgOfSteps$interval, avgOfSteps$steps,  type = "l", ylab = "steps", xlab = "intervals", main = "Average daily activity pattern")```Maximum number of septs in 5-minute interval is below.```{r}max(avgOfSteps$steps)```### 4. Imputing missing valuesThe raw data contained some missing values. And the total number of missing values in the data set is below.```{r}sum(is.na(dat$steps))```Creating a new dataset that is equal to the original dataset and filling in all of the missing values in the dataset. Missing values were filed with zero.```{r}newDat <- datnewDat$steps[is.na(newDat$steps)] <- 0sumOfNewSteps <- aggregate(steps ~ date, newDat, sum)hist(sumOfNewSteps$steps, main = "Total number of steps taken each day", xlab = "Steps", col="red")```Mean of corrected data is below.```{r}mean(newDat$steps, na.rm = TRUE)``` Median of corrected data is below.```{r}median(newDat$steps, na.rm = TRUE)```The mean of uncorrected data and corrected data are not significantly different. So there is no impact of imputing missing data on the estimates of the total daily number of steps. ### 5. Are there differences in activity patterns between weekdays and weekends?Creating a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.```{r}newDat$dateType <- weekdays(as.Date(newDat$date))getWeekdayType <- function(date) {    ifelse (date == "토요일" | date == "일요일", "weekend", "weekday" )}newDat$weekdayType <- sapply(newDat$dateType, getWeekdayType)```And making a panel plot containing a time series plot of the 5-minute interval and the average number of steps taken, averaged across all weekday days or weekend days.```{r}library(lattice)weekDat <- aggregate(steps ~ interval + weekdayType, newDat, mean)xyplot(steps ~ interval | factor(weekdayType), data=weekDat, aspect=1/3, type="l")```There are more steps on weekend than weekday.
